# datasets

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/fc2b/: dataset.ipynb  dataset.py  multiclass_bow.ipynb  scraper.ipynb  scraper.py  test_split_dataset.ipynb
