[tool.poetry]
name = "datasets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.0"
lxml = {extras = ["html-clean"], version = "^5.3.0"}
extractcontent3 = "^0.0.2"
readability-lxml = "^0.8.1"
html2text = "^2024.2.26"
tqdm = "^4.67.1"
text-model = {git = "https://github.com/hiropppe/topic-model.git", rev = "master"}
jupyterlab = "3.6.8"
jupyterlab-pygments = "0.2.2"
plotly = "^5.24.1"
mecab-python3 = "^1.0.10"
neologdn = "^0.5.3"
japanize-matplotlib = "^1.1.3"
trafilatura = "^2.0.0"
plotnine = {extras = ["all"], version = "^0.14.4"}

